--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "browser-storage-limits",
   "version": "0.0.0",
   "devDependencies": {
-    "grunt": "~0.4.1"
+    "grunt": "~0.4.1",
+    "grunt-contrib-connect": "~0.5.0"
   }
 }
